# cookiecutter-python-poetry

./: cookiecutter.json
{{cookiecutter.project_name}}/: Makefile  poetry.toml  pyproject.toml
